# Envision

./: .clang-format  .editorconfig  .gitignore  APIData.cpp  APIData.h  APIPrinter.cpp  APIPrinter.h  BoostPythonGen.pro  CMakeLists.txt  Config.cpp  EnvisionAstConsumer.cpp  EnvisionAstConsumer.h  EnvisionPPCallbacks.cpp  EnvisionPPCallbacks.h  GenTool.cpp  GenTool.h  GeneratorAction.cpp  GeneratorAction.h  LICENSE  QTCreatorHOWTO.txt  README.md  TypeUtilities.cpp  annotated.html  architecture.html  classA-members.html  classA.html  classAPIDepTest_1_1APIDep-members.html  classAPIDepTest_1_1APIDep.html  classAPIDepTest_1_1APIDepTestPlugin-members.html  classAPIDepTest_1_1APIDepTestPlugin.html  classAPIPrinter-members.html  classAPIPrinter.html  classA_3_01double_00_0110_01_4-members.html  classA_3_01double_00_0110_01_4.html  classA_3_01double_01_4-members.html  classA_3_01double_01_4.html  classA_3_4-members.html  classA_3_4.html  classAlloy_1_1AlloyException-members.html  classAlloy_1_1AlloyException.html  (+4007 more)
Alloy/: .project  Alloy.launch  Alloy.pro  CMakeLists.txt  alloy.plugin
Alloy/src/: AlloyException.cpp  AlloyException.h  AlloyPlugin.cpp  AlloyPlugin.h  alloy_api.h  precompiled.h
Alloy/test/: SimpleTest.cpp
AlloyIntegration/: .project  AlloyIntegration.launch  AlloyIntegration.pro  CMakeLists.txt  alloyintegration.plugin
AlloyIntegration/alloy_data/: AlloyModels.html
AlloyIntegration/src/: AlloyIntegrationException.cpp  AlloyIntegrationException.h  AlloyIntegrationPlugin.cpp  AlloyIntegrationPlugin.h  alloyintegration_api.h  precompiled.h
AlloyIntegration/test/: SimpleTest.cpp
CodeReview/: .project  CMakeLists.txt  CodeReview.launch  codereview.plugin
CodeReview/key-bindings/: CodeReview.json
CodeReview/src/: CodeReviewException.cpp  CodeReviewException.h  CodeReviewManager.cpp  CodeReviewManager.h  CodeReviewPlugin.cpp  CodeReviewPlugin.h  codereview_api.h  precompiled.h
CodeReview/test/: SimpleTest.cpp
Comments/: .cproject  .project  CMakeLists.txt  Comments.launch  Comments.pro  comments.plugin  res.qrc
Comments/src/: ColorPicker.cpp  ColorPicker.h  Colorchooser.cpp  Colorchooser.h  CommentDiagramToolbar.cpp  CommentDiagramToolbar.h  CommentsException.cpp  CommentsException.h  CommentsPlugin.cpp  CommentsPlugin.h  OutlineTypePicker.cpp  OutlineTypePicker.h  comments.cpp  comments.h  comments_api.h  precompiled.h  qtcolorpicker.cpp
Comments/test/: CommentsTest.cpp  CommentsTest.h  SimpleTest.cpp
ContractsLibrary/: .project  CMakeLists.txt  ContractsLibrary.launch  ContractsLibrary.pro  contractslibrary.plugin
ContractsLibrary/src/: ContractsLibraryException.cpp  ContractsLibraryException.h  ContractsLibraryPlugin.cpp  ContractsLibraryPlugin.h  contractslibrary.cpp  contractslibrary.h  contractslibrary_api.h  precompiled.h
ContractsLibrary/test/: SimpleTest.cpp
ControlFlowVisualization/: .project  CMakeLists.txt  ControlFlowVisualization.launch  ControlFlowVisualization.pro  controlflowvisualization.plugin
ControlFlowVisualization/headers/: ControlFlowVisualizationException.h  allCFVisualizations.h  controlflowvisualization_api.h  precompiled.h
ControlFlowVisualization/src/: ControlFlowVisualizationException.cpp  ControlFlowVisualizationException.h  ControlFlowVisualizationPlugin.cpp  ControlFlowVisualizationPlugin.h  allCFVisualizations.h  controlflowvisualization.cpp  controlflowvisualization.h  controlflowvisualization_api.h  precompiled.h
ControlFlowVisualization/test/: SimpleTest.cpp
Core/: .cproject  .gitignore  .project  CMakeLists.txt  Core.launch  Core.pro  common.pri  common_plugin.pri
Core/doc/: Core.dox
Core/headers/: EnvisionException.h  EnvisionManager.h  EnvisionPlugin.h  PluginInfo.h  global.h  precompiled.h
Core/src/: AdapterManager.cpp  AdapterManager.h  DefaultEnvisionManager.cpp  core.cpp  (+27 more)
CppExport/: .project  CMakeLists.txt  CppExport.launch  CppExport.pro  config.json  cppexport.plugin
CppImport/: .project  CMakeLists.txt  CppImport.launch  CppImport.pro  compile_commands.json  cppimport.plugin  llvm-config-envision.sh  test.cpp  test.h
CppImportLight/: CMakeLists.txt  cppimportlight.plugin
CustomMethodCall/: .project  CMakeLists.txt  CustomMethodCall.launch  CustomMethodCall.pro  custommethodcall.plugin
Export/: .project  CMakeLists.txt  Export.launch  Export.pro  Export.qrc  export.plugin
FilePersistence/: .cproject  .gitignore  .project  CMakeLists.txt  FilePersistence.launch  FilePersistence.pro  FilePersistence.qrc  filepersistence.plugin
HelloWorld/: .project  CMakeLists.txt  HelloWorld.launch  HelloWorld.pro
InformationScripting/: CMakeLists.txt  InformationScripting.pro  informationscripting.plugin
InteractionBase/: .cproject  .project  CMakeLists.txt  InteractionBase.launch  InteractionBase.pro  Makefile  Makefile.Debug  Makefile.Release  interactionbase.plugin
JavaExport/: .project  CMakeLists.txt  JavaExport.launch  JavaExport.pro  javaexport.plugin
Logger/: .cproject  .project  CMakeLists.txt  Logger.launch  Logger.pro  logger.plugin
ModelBase/: .cproject  .project  CMakeLists.txt  ModelBase.launch  ModelBase.pro
OODebug/: .project  CMakeLists.txt  OODebug.launch  OODebug.pro  oodebug.plugin
OOInteraction/: .cproject  .project  CMakeLists.txt  OOInteraction.launch  OOInteraction.pro  oointeraction.plugin
OOModel/: .cproject  .project  CMakeLists.txt  OOModel.launch  OOModel.pro  oomodel.plugin
OOVisualization/: .cproject  .project  CMakeLists.txt  OOVisualization Configuration.launch  OOVisualization.launch  OOVisualization.pro  oovisualization.plugin
PythonWrapperGenerator/: APIData.cpp  CMakeLists.txt  Config.h  EnvisionAstConsumer.cpp  EnvisionAstConsumer.h  GeneratorAction.cpp  LICENSE  PythonWrapperGenerator.pro  TypeUtilities.h  config.json
SelfTest/: .cproject  .project  CMakeLists.txt  SelfTest.launch  SelfTest.pro  selftest.plugin
VersionControlUI/: .project  CMakeLists.txt  VersionControlUI.launch  versioncontrolui.plugin
VisualizationBase/: .cproject  .project  CMakeLists.txt  VisualizationBase.launch  VisualizationBase.pro  visualizationbase.plugin
(+4470 files in other folders)
